[package]
name = "debug-interface"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem debug interface"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.37"
bytes = "1.0.0"
tokio = { version = "1.0.1", features = ["full"] }
reqwest = { version = "0.11.0", features = ["blocking", "json"], default_features = false }
warp = { git = "https://github.com/bmwill/warp.git", rev = "40e1de82882f7e0c8b73d666d273315d961384f6" }

diem-logger = { path = "../logger", version = "0.1.0" }
diem-metrics = { path = "../metrics", version = "0.1.0" }
diem-workspace-hack = { path = "../workspace-hack", version = "0.1.0" }
